// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Select Input/Item selected text only 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 > label {
  padding: 0 8px 0 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: 300px;
}

<div
  className="c0"
>
  <div
    className="itemContainer  c1"
  >
    <div
      className="labelContainer c2"
    >
      Hello
    </div>
    <i
      className="icon wg-check"
    />
  </div>
</div>
`;

exports[`Storyshots Select Input/Item selected with checkbox + image 1`] = `
.c5 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding-left: 8px;
}

.c3 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c3 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  width: 16px;
  height: 16px;
  font-size: 8px;
  border-radius: 4px;
  color: #FFFFFF;
  background-color: #3498db;
  border-color: #3498db;
}

.c3 .visibleCheckbox .checkmark {
  visibility: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c3 .label {
  margin-left: 0;
}

.c3:hover .visibleCheckbox {
  color: #3498db;
  background-color: #ffffff;
  border-color: #3498db;
  border-width: 2px;
}

.c3 .hiddenCheckbox:focus + div .visibleCheckbox {
  border-color: #3498db;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 > label {
  padding: 0 8px 0 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  margin: -6px 8px -6px 0;
}

.c4:first-child {
  margin-left: -6px;
}

.c0 {
  width: 300px;
}

<div
  className="c0"
>
  <div
    className="itemContainer  c1"
  >
    <div
      className="labelContainer c2"
    >
      <label
        checked={true}
        className="checkbox c3"
        onMouseUp={[Function]}
      >
        <input
          checked={true}
          className="hiddenCheckbox"
          onChange={[Function]}
          type="checkbox"
        />
        <div
          className="centerVisibleCheckbox"
        >
          <div
            className="visibleCheckbox"
          >
            <div
              className="checkmark wg-check"
            />
          </div>
        </div>
      </label>
      <img
        alt=""
        className="itemImage c4 c5"
        height={40}
        size={40}
        src="https://picsum.photos/100?image=0"
        width={40}
      />
      Hello
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Input/Item selected with checkbox 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding-left: 8px;
}

.c3 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c3 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  width: 16px;
  height: 16px;
  font-size: 8px;
  border-radius: 4px;
  color: #FFFFFF;
  background-color: #3498db;
  border-color: #3498db;
}

.c3 .visibleCheckbox .checkmark {
  visibility: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c3 .label {
  margin-left: 0;
}

.c3:hover .visibleCheckbox {
  color: #3498db;
  background-color: #ffffff;
  border-color: #3498db;
  border-width: 2px;
}

.c3 .hiddenCheckbox:focus + div .visibleCheckbox {
  border-color: #3498db;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 > label {
  padding: 0 8px 0 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: 300px;
}

<div
  className="c0"
>
  <div
    className="itemContainer  c1"
  >
    <div
      className="labelContainer c2"
    >
      <label
        checked={true}
        className="checkbox c3"
        onMouseUp={[Function]}
      >
        <input
          checked={true}
          className="hiddenCheckbox"
          onChange={[Function]}
          type="checkbox"
        />
        <div
          className="centerVisibleCheckbox"
        >
          <div
            className="visibleCheckbox"
          >
            <div
              className="checkmark wg-check"
            />
          </div>
        </div>
      </label>
      Hello
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Input/Item selected with image 1`] = `
.c4 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 > label {
  padding: 0 8px 0 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  margin: -6px 8px -6px 0;
}

.c3:first-child {
  margin-left: -6px;
}

.c0 {
  width: 300px;
}

<div
  className="c0"
>
  <div
    className="itemContainer  c1"
  >
    <div
      className="labelContainer c2"
    >
      <img
        alt=""
        className="itemImage c3 c4"
        height={40}
        size={40}
        src="https://picsum.photos/100?image=0"
        width={40}
      />
      Hello
    </div>
    <i
      className="icon wg-check"
    />
  </div>
</div>
`;

exports[`Storyshots Select Input/Item text only 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 > label {
  padding: 0 8px 0 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: 300px;
}

<div
  className="c0"
>
  <div
    className="itemContainer  c1"
  >
    <div
      className="labelContainer c2"
    >
      Hello
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Input/Item with checkbox + image 1`] = `
.c5 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding-left: 8px;
}

.c3 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c3 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  width: 16px;
  height: 16px;
  font-size: 8px;
  border-radius: 4px;
  color: #3498db;
  background-color: #FFFFFF;
  border-color: rgba(0,0,0,0.16);
}

.c3 .visibleCheckbox .checkmark {
  visibility: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c3 .label {
  margin-left: 0;
}

.c3:hover .visibleCheckbox {
  border-color: #3498db;
  border-width: 2px;
}

.c3 .hiddenCheckbox:focus + div .visibleCheckbox {
  border-color: #3498db;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 > label {
  padding: 0 8px 0 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  margin: -6px 8px -6px 0;
}

.c4:first-child {
  margin-left: -6px;
}

.c0 {
  width: 300px;
}

<div
  className="c0"
>
  <div
    className="itemContainer  c1"
  >
    <div
      className="labelContainer c2"
    >
      <label
        className="checkbox c3"
        onMouseUp={[Function]}
      >
        <input
          className="hiddenCheckbox"
          onChange={[Function]}
          type="checkbox"
        />
        <div
          className="centerVisibleCheckbox"
        >
          <div
            className="visibleCheckbox"
          >
            <div
              className="checkmark wg-check"
            />
          </div>
        </div>
      </label>
      <img
        alt=""
        className="itemImage c4 c5"
        height={40}
        size={40}
        src="https://picsum.photos/100?image=0"
        width={40}
      />
      Hello
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Input/Item with checkbox 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding-left: 8px;
}

.c3 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c3 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  width: 16px;
  height: 16px;
  font-size: 8px;
  border-radius: 4px;
  color: #3498db;
  background-color: #FFFFFF;
  border-color: rgba(0,0,0,0.16);
}

.c3 .visibleCheckbox .checkmark {
  visibility: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c3 .label {
  margin-left: 0;
}

.c3:hover .visibleCheckbox {
  border-color: #3498db;
  border-width: 2px;
}

.c3 .hiddenCheckbox:focus + div .visibleCheckbox {
  border-color: #3498db;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 > label {
  padding: 0 8px 0 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: 300px;
}

<div
  className="c0"
>
  <div
    className="itemContainer  c1"
  >
    <div
      className="labelContainer c2"
    >
      <label
        className="checkbox c3"
        onMouseUp={[Function]}
      >
        <input
          className="hiddenCheckbox"
          onChange={[Function]}
          type="checkbox"
        />
        <div
          className="centerVisibleCheckbox"
        >
          <div
            className="visibleCheckbox"
          >
            <div
              className="checkmark wg-check"
            />
          </div>
        </div>
      </label>
      Hello
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Input/Item with image 1`] = `
.c4 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 > label {
  padding: 0 8px 0 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  margin: -6px 8px -6px 0;
}

.c3:first-child {
  margin-left: -6px;
}

.c0 {
  width: 300px;
}

<div
  className="c0"
>
  <div
    className="itemContainer  c1"
  >
    <div
      className="labelContainer c2"
    >
      <img
        alt=""
        className="itemImage c3 c4"
        height={40}
        size={40}
        src="https://picsum.photos/100?image=0"
        width={40}
      />
      Hello
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Input/Item withID 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 > label {
  padding: 0 8px 0 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: 300px;
}

<div
  className="c0"
>
  <div
    className="itemContainer  c1"
    id="Select-item-withId"
  >
    <div
      className="labelContainer c2"
    >
      Hello
    </div>
  </div>
</div>
`;
